--- a/demo/drawPolygon/index.html
+++ b/demo/drawPolygon/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 
-	<script src='../../../jslib/gClass.js'></script>
+	<!--<script src='../../../jslib/gClass.js'></script>
 	<script src='../../../jslib/gConfig.js'></script>
 	<script src='../../../jslib/gUtil.js'></script>
 	<script src='../../../jslib/gGraph.js'></script>
@@ -13,9 +13,9 @@
     <script src='../../../jslib/gStyle.js'></script>
     <script src="../../../jslib/gEdit.js"></script>
 	<script src='../../../jslib/gMap.js'></script>
-	<script src='../../../jslib/gLayer.js'></script>
+	<script src='../../../jslib/gLayer.js'></script>-->
 
-	<!--<script src='../../gDBox.pkg.min.js'></script>-->
+	<script src='../../gDBox.pkg.min.js'></script>
 	<style>
         #map {
         	width: 700px;
@@ -33,7 +33,39 @@
 </head>
 <body>
 	<div id="map"></div>
-	<div>鼠标按下开始绘制，弹起绘制完成</div>
-	<script src='./index.js'></script>
+    <div>按下shift键执行图形选择</div>
+    <div>在图形选中状态下，按下shift键捕捉图形顶点单击删除</div>
+    <script>
+        // 常用样式声明
+        const gFetureStyle = new gDBox.Style({strokeColor: '#0000FF'});
+
+        // 容器对象声明
+        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+
+        // 设置当前操作模式为‘drawRect’
+        gMap.setMode('drawPolygon', gFetureStyle);
+
+        // 图片层实例\添加
+        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        gMap.addLayer(gImageLayer);
+
+        // 矢量层实例\添加
+        let gFeatureLayer = new gDBox.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
+        gMap.addLayer(gFeatureLayer);
+
+        gMap.events.on('geometryDrawDone', function (type, points) {
+            // 生成元素唯一标志（时间戳）
+            const timestamp = new Date().getTime();
+            // 元素添加展示
+            let fea = new gDBox.Feature.Polygon(`feature-${timestamp}`, points, {
+                name: '中国'
+            }, gFetureStyle);
+            gFeatureLayer.addFeature(fea);
+        });
+        gMap.events.on('geometryEditDone', (type, activeFeature, points) => {
+            activeFeature.update({points});
+            activeFeature.show();
+        });
+    </script>
 </body>
 </html>
