--- a/demo/marker/index.html
+++ b/demo/marker/index.html
@@ -29,6 +29,28 @@
 <body>
 	<div id="map"></div>
 	<span>说明：点击marker执行删除</span>
-	<script src='./index.js'></script>
+    <script>
+        // 容器对象声明
+        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+
+        // 图片层实例\添加
+        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        gMap.addLayer(gImageLayer);
+
+        // 不需要声明markerLayer标注图层，有且只有一个markerLayer，可通过gMap.mLayer来获取
+
+        // marker对象实例\添加
+        const marker = new gDBox.Marker('name-中国', {
+            src: '../../imgs/marker.png',
+            x: 0,
+            y: 0,
+            offset: {x: -32, y: -32},
+        });
+        // 注册监听事件删除标注
+        marker.regEvent('click', function () {
+            gMap.mLayer.removeMarker(this);
+        });
+        gMap.mLayer.addMarker(marker);
+    </script>
 </body>
 </html>
