--- a/demo/feature/index.html
+++ b/demo/feature/index.html
@@ -28,6 +28,30 @@
 </head>
 <body>
 	<div id="map"></div>
-	<script src='./index.js'></script>
+    <script>
+        // 常用样式声明
+        const gFetureStyle = new gDBox.Style({strokeColor: '#0000FF'});
+
+        // 容器对象声明
+        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+
+        // 图片层实例\添加
+        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        gMap.addLayer(gImageLayer);
+
+        // 矢量层实例\添加
+        let gFeatureLayer = new gDBox.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
+        gMap.addLayer(gFeatureLayer);
+
+        // 矢量要素实例\添加
+        const fea = new gDBox.Feature.Polygon('id-name', [
+            {x: 10, y: 10},
+            {x: 50, y: 10},
+            {x: 40, y: 50},
+            {x: 20, y: 60},
+            {x: 10, y: 10}
+        ], {name: '中国'}, gFetureStyle);
+        gFeatureLayer.addFeature(fea);
+    </script>
 </body>
 </html>
