--- a/demo/hover/index.html
+++ b/demo/hover/index.html
@@ -30,6 +30,43 @@
 	<div id="map"></div>
 	<button onmouseover="mouseOver();" onmouseout="mouseOut();">hover我:id='110'</button>
 	<div>鼠标滑入矢量要素‘高亮突出’，滑出取消高亮</div>
-	<script src='./index.js'></script>
+	<script>
+        // 常用样式声明
+        const gFetureStyle = new gDBox.Style({strokeColor: '#0000FF', lineDash: true, lineWeight: 2});
+        const gFetureHoverStyle = new gDBox.Style({strokeColor: '#FF0000', lineDash: false, lineWeight: 2});
+
+        // 容器对象声明
+        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+
+        // 图片层实例\添加
+        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        gMap.addLayer(gImageLayer);
+
+        // 矢量层实例\添加
+        let gFeatureLayer = new gDBox.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
+        gMap.addLayer(gFeatureLayer);
+
+        // 矢量要素实例\添加
+        const fea = new gDBox.Feature.Polygon('110', [
+            {x: 10, y: 10},
+            {x: 50, y: 10},
+            {x: 40, y: 50},
+            {x: 20, y: 60},
+            {x: 10, y: 10}
+        ], {name: '中国'}, gFetureStyle);
+        gFeatureLayer.addFeature(fea);
+
+        // hover事件
+        function mouseOver() {
+            let cfeature = gFeatureLayer.getFeatureById('110');
+            if (!cfeature) {
+                return;
+            }
+            cfeature.hover();
+        }
+        function mouseOut() {
+            gFeatureLayer.resetFeatureStatus();
+        }
+    </script>
 </body>
 </html>
