--- a/demo/text/index.html
+++ b/demo/text/index.html
@@ -28,6 +28,29 @@
 </head>
 <body>
 	<div id="map"></div>
-	<script src='./index.js'></script>
+    <script>
+        // 常用样式声明
+        const gTextStyle = new gDBox.Style({fontColor: '#0000FF', strokeColor: '#0000FF', opacity: 0});
+
+        // 容器对象声明
+        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+
+        // 图片层实例\添加
+        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        gMap.addLayer(gImageLayer);
+
+        // 文本层实例\添加
+        let gTextLayer = new gDBox.Layer.Text('textLayer', {zIndex: 2});
+        gMap.addLayer(gTextLayer);
+
+        // 文本实例\添加
+        const text = new gDBox.Text('id', {
+            pos: {x: 100, y: 100},
+            offset: {x: 0, y: 0},
+            width: 100, // maxwidth
+            text: '中国'
+        }, gTextStyle);
+        gTextLayer.addText(text);
+    </script>
 </body>
 </html>
