--- a/examples/demo/editRect/index.html
+++ b/examples/demo/editRect/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
 
-    <!--<script src="../../../jslib/gClass.js"></script>
+    <!-- <script src="../../../jslib/gClass.js"></script>
     <script src="../../../jslib/gConfig.js"></script>
     <script src="../../../jslib/gUtil.js"></script>
     <script src="../../../jslib/gGraph.js"></script>
@@ -13,9 +13,9 @@
     <script src="../../../jslib/gStyle.js"></script>
     <script src="../../../jslib/gEdit.js"></script>
     <script src="../../../jslib/gMap.js"></script>
-    <script src="../../../jslib/gLayer.js"></script>-->
+    <script src="../../../jslib/gLayer.js"></script> -->
 
-    <script src="../../gDBox.pkg.min.js"></script>
+    <script src="../../AILabel.pkg.min.js"></script>
     <style>
         #map {
             height: 400px;
@@ -29,27 +29,27 @@
     <div>鼠标按下开始绘制，弹起绘制完成</div>
     <script>
         // 常用样式声明
-        const gFetureStyle = new gDBox.Style({strokeColor: '#0000FF', lineWeight: 2});
+        const gFetureStyle = new AILabel.Style({strokeColor: '#0000FF', lineWeight: 2});
 
         // 容器对象声明
-        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+        let gMap = new AILabel.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10, autoFeatureSelect: true});
 
         // 设置当前操作模式为‘drawRect’
         gMap.setMode('drawRect', gFetureStyle);
 
         // 图片层实例\添加
-        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        let gImageLayer = new AILabel.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
         gMap.addLayer(gImageLayer);
 
         // 矢量层实例\添加
-        let gFeatureLayer = new gDBox.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
+        let gFeatureLayer = new AILabel.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
         gMap.addLayer(gFeatureLayer);
 
         gMap.events.on('geometryDrawDone', function (type, points) {
             // 生成元素唯一标志（时间戳）
             const timestamp = new Date().getTime();
             // 元素添加展示
-            let fea = new gDBox.Feature.Polygon(`feature-${timestamp}`, points, {
+            let fea = new AILabel.Feature.Rect(`feature-${timestamp}`, points, {
                 name: '中国'
             }, gFetureStyle);
             gFeatureLayer.addFeature(fea);
@@ -67,7 +67,7 @@
             if (!gMap.mLayer) return;
             const marker = gMap.mLayer.getMarkerById(`marker-${feature.id}`);
             if (!marker) return;
-            const bounds = gDBox.Util.getBounds(points);
+            const bounds = AILabel.Util.getBounds(points);
             const leftTopPoint = bounds[0]; // 边界坐上角坐标
             marker.update({x: leftTopPoint.x, y: leftTopPoint.y});
         });
@@ -77,7 +77,7 @@
             // 删除按钮添加
             const featureBounds = cFeature.getBounds();
             const leftTopPoint = featureBounds[0]; // 边界坐上角坐标
-            let deleteMarker = new gDBox.Marker(`marker-${cFeature.id}`,
+            let deleteMarker = new AILabel.Marker(`marker-${cFeature.id}`,
                 {
                     src: '../../imgs/delete.png',
                     x: leftTopPoint.x,
@@ -97,6 +97,28 @@
                 gMap.mLayer.removeAllMarkers();
             });
         });
+
+        // const timestamp = new Date(); // 关联标志
+        // const feature = new AILabel.Feature.Polygon(`feature-${timestamp}`, .....);
+
+        // // positon可通过feature.points空间数据关联
+        // const text = new AILabel.Text(`text-${timestamp}`, .....);
+
+        // // positon可通过feature.points空间数据关联
+        // const marker = new AILabel.Marker(`marker-${timestamp}`, .....);
+
+        // featureLayer.addFeature(feature);
+        // textLayer.addText(text);
+        // gMap.mLayer.addMarker(marker);
+
+        // // 删除
+        // marker.regEvent('click', function () {
+        //     // this指当前对象marker
+        //     const releateKey = this.id.split('-')[1];
+        //     featureLayer.removeFeatureById(`feature-${releateKey}`);
+        //     textLayer.removeTextById(`text-${releateKey}`);
+        //     gMap.mLayer.removeMarkerById(`marker-${releateKey}`);
+        // };
 
         window.onresize = function () {
             gMap && gMap.resize();
