--- a/examples/demo/text/index.html
+++ b/examples/demo/text/index.html
@@ -15,7 +15,7 @@
 	<script src='../../../jslib/gMap.js'></script>
 	<script src='../../../jslib/gLayer.js'></script>-->
 
-	<script src='../../gDBox.pkg.min.js'></script>
+	<script src='../../AILabel.pkg.min.js'></script>
 	<style>
         #map {
         	width: 500px;
@@ -30,28 +30,27 @@
 	<div id="map"></div>
     <script>
         // 常用样式声明
-        const gFetureStyle = new gDBox.Style({strokeColor: '#0000FF'});
+        const gTextStyle = new AILabel.Style({fontColor: '#0000FF', strokeColor: '#0000FF', opacity: 0});
 
         // 容器对象声明
-        let gMap = new gDBox.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
+        let gMap = new AILabel.Map('map', {zoom: 1080, cx: 0, cy: 0, zoomMax: 650 * 10, zoomMin: 650 / 10});
 
         // 图片层实例\添加
-        let gImageLayer = new gDBox.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
+        let gImageLayer = new AILabel.Layer.Image('img', '../../imgs/demo.jpeg', {w: 1080, h: 720}, {zIndex: 1});
         gMap.addLayer(gImageLayer);
 
-        // 矢量层实例\添加
-        let gFeatureLayer = new gDBox.Layer.Feature('featureLayer', {zIndex: 2, transparent: true});
-        gMap.addLayer(gFeatureLayer);
+        // 文本层实例\添加
+        let gTextLayer = new AILabel.Layer.Text('textLayer', {zIndex: 2});
+        gMap.addLayer(gTextLayer);
 
-        // 矢量要素实例\添加
-        const fea = new gDBox.Feature.Polygon('id-name', [
-            {x: 10, y: 10},
-            {x: 50, y: 10},
-            {x: 40, y: 50},
-            {x: 20, y: 60},
-            {x: 10, y: 10}
-        ], {name: '中国'}, gFetureStyle);
-        gFeatureLayer.addFeature(fea);
+        // 文本实例\添加
+        const text = new AILabel.Text('id', {
+            pos: {x: 100, y: 100},
+            offset: {x: 0, y: 0},
+            width: 100, // maxwidth
+            text: '中国'
+        }, gTextStyle);
+        gTextLayer.addText(text);
     </script>
 </body>
 </html>
