涂抹&滑轮缩放性能优化

--- a/demo/index.html
+++ b/demo/index.html
@@ -42,6 +42,7 @@
             center: {x: 250, y: 177}, // 为了让图片居中
             zoom: 800,
             mode: 'PAN', // 绘制线段
+            refreshDelayWhenZooming: true, // 缩放时是否允许刷新延时，性能更优
             zoomWhenDrawing: true,
             panWhenDrawing: true
         });
