--- a/demo/index.html
+++ b/demo/index.html
@@ -264,6 +264,10 @@
                 position: { // 左上角相对中心点偏移量
                     x: 0,
                     y: 0
+                },
+                grid: { // 3 * 3
+                    columns: [{color: '#9370DB'}, {color: '#FF6347'}],
+                    rows: [{color: '#9370DB'}, {color: '#FF6347'}]
                 }
             }, // imageInfo
             {name: '第一个图片图层'}, // props
