--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,7 @@
         style="overflow: hidden; position: relative; width: 700px; height: 600px; border: 1px solid red"></div>
     <button onclick="zoomIn();">+放大</button>
     <button onclick="zoomOut();">-缩小</button>
+    <a href="./label/index.html" target="_blank">跳转>>标注demo</a>
     <br/>
     <button onclick="setMode('PAN');">平移</button>
     <button onclick="setMode('MARKER');">注记</button>
