--- a/demo/label/index.html
+++ b/demo/label/index.html
@@ -230,5 +230,16 @@
             gMap && gMap.resize();
         }
     </script>
+
+<!-- 百度统计代码添加 -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?b13f8c8b80f29406d4bd21b98f268578";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </body>
 </html>
