错别字修改

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="padding: 20px">
     <div>AILabel目前已进行重构开源</div><br/>
-    <a href="https://github.com/dingyang9642/AILabel" target="_blank">源代码：https://github.com/dingyang9642/AILabel<a>（start点起来）<br/><br/>
+    <a href="https://github.com/dingyang9642/AILabel" target="_blank">源代码：https://github.com/dingyang9642/AILabel<a>（star点起来）<br/><br/>
     <a href="http://ailabel.com.cn/public/ailabel/api/index.html" target="_blank">API文档：http://ailabel.com.cn/public/ailabel/api/index.html</a><br/><br/>
     <a href="http://ailabel.com.cn/public/ailabel/demo/index.html" target="_blank">Demo文档：http://ailabel.com.cn/public/ailabel/demo/index.html</a><br/><br/>
     <a href="http://ailabel.com.cn/public/ailabel/demo/label/index.html" target="_blank">Demo1文档：http://ailabel.com.cn/public/ailabel/demo/label/index.html</a><br/><br/>
