--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="http://ailabel.com.cn/public/ailabel/api/index.html" target="_blank">API文档：http://ailabel.com.cn/public/ailabel/api/index.html</a><br/><br/>
     <a href="http://ailabel.com.cn/public/ailabel/demo/index.html" target="_blank">Demo文档：http://ailabel.com.cn/public/ailabel/demo/index.html</a><br/><br/>
     <a href="http://ailabel.com.cn/public/ailabel/demo/label/index.html" target="_blank">Demo1文档：http://ailabel.com.cn/public/ailabel/demo/label/index.html</a><br/><br/>
-    <a href="https://www.npmjs.com/package/ailabel" target="_blank">npm地址：https://www.npmjs.com/package/ailabel</a><br/><br/>
+    <a href="https://www.npmjs.com/package/ailabel" target="_blank">npm地址：https://www.npmjs.com/package/ailabel</a><br/><br/><br/><br/>
+
+    <div> < v5.x.x 版本文档</div>
+    <a href="https://dingyang9642.github.io/AILabel/old_version_docs" target="_blank">api地址：https://dingyang9642.github.io/AILabel/old_version_docs</a><br/><br/>
 </body>
 </html>
