--- a/demo/index.html
+++ b/demo/index.html
@@ -104,7 +104,8 @@
             mode: 'PAN', // 绘制线段
             refreshDelayWhenZooming: true, // 缩放时是否允许刷新延时，性能更优
             zoomWhenDrawing: true,
-            panWhenDrawing: true
+            panWhenDrawing: true,
+            withHotKeys: false // 关闭快捷键
         });
 
         // gMap.slots.on('drawActivePoint', (point, instance) => {
