--- a/demo/index.html
+++ b/demo/index.html
@@ -105,6 +105,7 @@
             refreshDelayWhenZooming: true, // 缩放时是否允许刷新延时，性能更优
             zoomWhenDrawing: true,
             panWhenDrawing: true,
+            zoomWheelRatio: 0, // 控制滑轮缩放缩率[0, 10), 值越小，则缩放越快，反之越慢
             withHotKeys: false // 关闭快捷键
         });
 
