--- a/demo/label/index.html
+++ b/demo/label/index.html
@@ -66,6 +66,7 @@
     <div class="button-wrap">
         <button class="btn btn-default" onclick="setMode('PAN');">平移</button>
         <button class="btn btn-default" onclick="setMode('RECT');">矩形</button>
+        <button class="btn btn-default" onclick="switchImage();">下一张</button>
         &nbsp;&nbsp;
         <a href="../index.html" target="_blank">>>详细demo</a>
     </div>
@@ -84,6 +85,20 @@
     <script>
         let drawingStyle = {}; // 绘制过程中样式
         const dpr = window.devicePixelRatio;
+        const images = [
+            {src: '../bg.webp', zoom: 800, center: {x: 250, y: 177}, width: 500, height: 354},
+            {src: './bg2.jpeg', zoom: 1500, center: {x: 600, y: 397.5}, width: 1200, height: 795},
+            {src: './libai.jpeg', zoom: 800, center: {x: 320, y: 160.5}, width: 640, height: 321},
+            {src: './zhangliang.jpeg', zoom: 800, center: {x: 375, y: 210.5}, width: 750, height: 421}
+        ];
+        let index = 0; // 当前图片的index
+        function getNextImage() {
+            const currentIndex = index;
+            // 重新计算index
+            index = (index + 1) >= images.length ? 0 : (index + 1);
+            // 返回图片信息
+            return images[currentIndex];
+        }
 
         const gMap = new AILabel.Map('map', {
             center: {x: 250, y: 177}, // 为了让图片居中
@@ -188,27 +203,6 @@
         );
         gMap.addLayer(gFirstTextLayer);
 
-        // 图片层添加
-        const gFirstImageLayer = new AILabel.Layer.Image(
-            'first-layer-image', // id
-            {
-                src: 'https://img2.baidu.com/it/u=2053804264,1341330775&fm=26&fmt=auto&gp=0.jpg',
-                width: 500,
-                height: 354,
-                position: { // 左上角相对中心点偏移量
-                    x: 0,
-                    y: 0
-                },
-                grid: { // 3 * 3
-                    columns: [{color: '#9370DB'}, {color: '#FF6347'}],
-                    rows: [{color: '#9370DB'}, {color: '#FF6347'}]
-                }
-            }, // imageInfo
-            {name: '第一个图片图层'}, // props
-            {zIndex: 5} // style
-        );
-        gMap.addLayer(gFirstImageLayer);
-
         function setMode(mode) {
             gMap.setMode(mode);
             // 后续对应模式处理
@@ -225,6 +219,42 @@
                     break;
             }
         }
+
+        // 切换图片
+        let gFirstImageLayer;
+        function switchImage() {
+            // 图片层添加
+            const initImage = getNextImage();
+            gFirstImageLayer && gMap.removeLayerById('first-layer-image');
+
+            gFirstTextLayer.removeAllTexts();
+            gFirstFeatureLayer.removeAllFeatures();
+            gMap.markerLayer.removeAllMarkers();
+
+            // 实例化图片层
+            gFirstImageLayer = new AILabel.Layer.Image(
+                'first-layer-image', // id
+                {
+                    src: initImage.src,
+                    width: initImage.width,
+                    height: initImage.height,
+                    position: { // 左上角相对中心点偏移量
+                        x: 0,
+                        y: 0
+                    },
+                    grid: { // 3 * 3
+                        columns: [{color: '#9370DB'}, {color: '#FF6347'}],
+                        rows: [{color: '#9370DB'}, {color: '#FF6347'}]
+                    }
+                }, // imageInfo
+                {name: '第一个图片图层'}, // props
+                {zIndex: 5} // style
+            );
+            gMap.addLayer(gFirstImageLayer);
+
+            gMap.centerAndZoom({center: initImage.center, zoom: initImage.zoom});
+        }
+        switchImage();
 
         window.onresize = function() {
             gMap && gMap.resize();
