绘制线段支持箭头，IFeatureStyle增加arrow?:boolean配置

--- a/demo/index.html
+++ b/demo/index.html
@@ -439,7 +439,7 @@
                     break;
                 }
                 case 'LINE': {
-                    drawingStyle = {strokeStyle: '#FF00FF', lineJoin: 'round', lineCap: 'round', lineWidth: 10};
+                    drawingStyle = {strokeStyle: '#FF00FF', lineJoin: 'round', lineCap: 'round', lineWidth: 10, arrow: false};
                     gMap.setDrawingStyle(drawingStyle);
                     break;
                 }
