对选中feature可通过快捷键up/down/left/right进行feature位置微调

--- a/demo/index.html
+++ b/demo/index.html
@@ -106,7 +106,7 @@
             zoomWhenDrawing: true,
             panWhenDrawing: true,
             zoomWheelRatio: 5, // 控制滑轮缩放缩率[0, 10), 值越小，则缩放越快，反之越慢
-            withHotKeys: false // 关闭快捷键
+            withHotKeys: true // 关闭快捷键
         });
 
         // gMap.slots.on('drawActivePoint', (point, instance) => {
