1.feature绘制鼠标左键2.events增加draging

--- a/demo/index.html
+++ b/demo/index.html
@@ -124,6 +124,9 @@
         gMap.events.on('click', point => {
             // console.log('--click--', point);
         });
+        gMap.events.on('draging', shape => {
+            console.log('--draging--', shape);
+        });
 
         gMap.events.on('drawDone', (type, data, data1) => {
             console.log('--type, data--', type, data);
